# DeepRead

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmark/: __init__.py  compare.py  queries.jsonl  report_pilot.py  run.py
data/sample_corpus/: hierarchical-reading.md  hybrid-retrieval.md  wetlands.md
docs/: next_generation_retrieval_system_design.docx
reports/paper_known_pilot/: README.md  aggregate.json
reports/paper_known_pilot/traces/: best-answer-18c5d366b1.json  boolean-failure-1f085b9bb7.json  figure-table-case-5eda469a8a.json  retrieval-miss-a87a009c24.json
src/deepread/: __init__.py  api.py  cli.py  comparison.py  config.py  corpus.py  engine.py  evaluation.py  evaluation_runner.py  memory.py  models.py  openai_provider.py  planner.py  qasper.py  reader.py  retrieval.py  synthesis.py  text.py
src/deepread_evidencegraph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_ablations.py  test_comparison.py  test_engine.py  test_evaluation.py  test_openai_provider.py  test_qasper.py  test_reader.py
traces/: latest.json
